compiler/tools/fpp-check/test/connection_pattern/health_missing_port.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/connection_pattern/health_missing_port.fpp: 17.33
    health connections instance $health { c }
                                ^
error: instance health has no ping input port
